corrected body scroll on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,3 +68,7 @@
 .full-width {
   text-align: center;
 }
+
+@media(max-width: 600px) {
+  body { overflow-y: auto !important; }
+}
